# photo_racoon

./: CMakeLists.txt  README.md  changelog.md  main.c  rebuild
arg_parser/: CMakeLists.txt  arg_parser.c  arg_parser.h
filters/: CMakeLists.txt  filters.h  gamma.c  levels.c  negative.c  thresholding.c
image/: CMakeLists.txt  formats.c  formats.h  image.c  image.h  loader.c  loader.h  saver.c  saver.h
image/test/: CMakeLists.txt  input_test.pgm  test_image_set_filenames.c  test_loader_image.c
